# docs/openapi_v3-pods.yml
@@ -20,7 +20,7 @@ info:
   license:
     name: BSD 3.0
     url: https://github.com/tapis-project/pods_service
-  version: 1.6.0
+  version: 1.8.3
 paths:
   /traefik-config:
     get:
@@ -1910,23 +1910,23 @@ paths:
         \  6) User logs in via browser, authorizes client, redirects to callback_url\
         \ at https://tacc.tapis.io/v3/pods/fastapi/auth/callback?code=CodeHere\n \
         \ 7) Callback url exchanges code for token, gets username from token, sets\
-        \ X-Tapis-Token and X-Tapis-Username cookies\n  8) User gets redirected back\
-        \ to https://fastapi.pods.tacc.tapis.io, Traefik starts forwardAuth, user\
-        \ at this point should be authenticated\n  9) Auth endpoint responds with\
-        \ 200, sets headers specified by networking stanza, and users gets to fastapi\
-        \ hello world response.\n\nusers can specify:\n - tapis_auth=True/False -\
-        \ Turns on auth\n - tapis_auth_response_headers - dict[str] - headers to set\
-        \ on response and their values\n - tapis_auth_allowed_users - list[str] -\
-        \ list of tapis users allowed to access pod\n - tapis_auth_return_path - str\
-        \ - uri to return to after auth, default is \"passthrough\", which we save\
-        \ in cookies(?) and return to. x-forwarded-host?\n\n - response headers need\
-        \ to be slightly modifiable to allow for different application requirements\n\
+        \ X-Tapis-Token cookies, sets response headers according to tapis_auth_response_headers\n\
+        \  8) User gets redirected back to https://fastapi.pods.tacc.tapis.io/{tapis_auth_return_path},\
+        \ Traefik starts forwardAuth, user at this point should be authenticated\n\
+        \  9) Auth endpoint responds with 200, sets headers specified by networking\
+        \ stanza, and users gets to fastapi hello world response.\n\nusers can specify:\n\
+        \ - tapis_auth=True/False - Turns on auth\n - tapis_auth_response_headers\
+        \ - dict[str] - headers to set on response and their values\n - tapis_auth_allowed_users\
+        \ - list[str] - list of tapis users allowed to access pod\n - tapis_auth_return_path\
+        \ - str - uri to return to after auth, default is \"passthrough\", which we\
+        \ save in cookies(?) and return to. x-forwarded-host?\n\n - response headers\
+        \ need to be slightly modifiable to allow for different application requirements\n\
         \ - for example we have to pass username, but many apps require @email.bit,\
         \ so user must be able to append to user.\n - tapis_auth_response_headers:\
-        \ {\"X-Tapis-Username\": \"<<tapisusername>>@tapis.io\", \"X-Tapis-Token\"\
-        : \"<<token>>\", \"OAUTH2_USERNAME_KEY\": \"username\"}\n\n - tapis_auth_allowed_users,\
-        \ checks username against .lower() of username list to make sure it's in list.\
-        \ otherwise deny"
+        \ {\"X-Tapis-Username\": \"<<tapisusername>>@tapis.io\", \"FROM\": \"pods\
+        \ auth endpoint from <<tenant>>.<<site>>\", \"OAUTH2_USERNAME_KEY\": \"username\"\
+        }\n\n - tapis_auth_allowed_users, checks username against .lower() of username\
+        \ list to make sure it's in list. otherwise deny"
       operationId: pod_auth
       parameters:
       - required: true
@@ -2260,6 +2260,7 @@ components:
           format: date-time
           title: Creation Ts
           description: Time (UTC) that this image was created.
+          default: '2025-04-25T21:52:37.337179'
         added_by:
           type: string
           title: Added By
@@ -3690,6 +3691,38 @@ components:
           title: Tapis Auth Return Path
           description: Path to redirect to when accessing the pod via Tapis auth.
           default: /
+        cors_allow_origins:
+          items:
+            type: string
+          type: array
+          title: Cors Allow Origins
+          description: List of CORS allowed origins. ex. ['https://tacc.develop.tapis.io',
+            'https://tacc.tapis.io']
+          default: []
+        cors_allow_methods:
+          items:
+            type: string
+          type: array
+          title: Cors Allow Methods
+          description: List of CORS allowed methods. ex. ['GET', 'POST', 'PUT', 'DELETE']
+          default: []
+        cors_allow_headers:
+          items:
+            type: string
+          type: array
+          title: Cors Allow Headers
+          description: List of CORS allowed headers. ex. ['Content-Type', 'X-Tapis-Token']
+          default: []
+        cors_allow_credentials:
+          type: boolean
+          title: Cors Allow Credentials
+          description: Boolean to allow credentials to be sent with CORS requests.
+          default: false
+        cors_max_age:
+          type: integer
+          title: Cors Max Age
+          description: Max age of CORS preflight requests in seconds.
+          default: 100
         tapis_ui_uri:
           type: string
           title: Tapis Ui Uri
@@ -3815,6 +3848,38 @@ components:
           title: Tapis Auth Return Path
           description: Path to redirect to when accessing the pod via Tapis auth.
           default: /
+        cors_allow_origins:
+          items:
+            type: string
+          type: array
+          title: Cors Allow Origins
+          description: List of CORS allowed origins. ex. ['https://tacc.develop.tapis.io',
+            'https://tacc.tapis.io']
+          default: []
+        cors_allow_methods:
+          items:
+            type: string
+          type: array
+          title: Cors Allow Methods
+          description: List of CORS allowed methods. ex. ['GET', 'POST', 'PUT', 'DELETE']
+          default: []
+        cors_allow_headers:
+          items:
+            type: string
+          type: array
+          title: Cors Allow Headers
+          description: List of CORS allowed headers. ex. ['Content-Type', 'X-Tapis-Token']
+          default: []
+        cors_allow_credentials:
+          type: boolean
+          title: Cors Allow Credentials
+          description: Boolean to allow credentials to be sent with CORS requests.
+          default: false
+        cors_max_age:
+          type: integer
+          title: Cors Max Age
+          description: Max age of CORS preflight requests in seconds.
+          default: 100
         tapis_ui_uri:
           type: string
           title: Tapis Ui Uri
@@ -3885,14 +3950,14 @@ components:
 tags:
 - name: Pods
   description: Create and command pods.
-- name: Credentials
-  description: Manage pod's credentials used.
-- name: Logs
-  description: Manage pod logs.
-- name: Permissions
-  description: Manage pod permissions. Grant specific TACC users **READ**, **USER**,
-    and **ADMIN** level permissions.
+- name: Templates
+  description: Create and manage templated pod definitions for use in pod deployment.
 - name: Volumes
   description: Create and manage volumes.
 - name: Snapshots
   description: Create and manage snapshots.
+- name: Images
+  description: Create and manage docker images available in the service.
+- name: Permissions
+  description: Manage pod permissions. Grant specific TACC users **READ**, **USER**,
+    and **ADMIN** level permissions.
